2014-11-23  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (gtk_adjustment_configure): Define for Gtk+ < 2.14.
	(xg_set_toolkit_horizontal_scroll_bar_thumb): Remove wrong version
	check for gtk_adjustment_configure (Bug#19149).

2014-11-22  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (emacs.res): Add dependency on icons/hand.cur.  Use $<.

2014-11-22  Martin Rudalics  <rudalics@gmx.at>

	Don't shrink frame when using desktop-save-mode (Bug#19048).
	* w32fns.c (x_set_tool_bar_lines): Always call
	x_change_tool_bar_height (Bug#19048).
	(x_change_tool_bar_height): Mark frame as garbaged since
	adjust_frame_size might not have done that.
	* xfns.c (x_set_tool_bar_lines): Always call
	x_change_tool_bar_height (Bug#19048).
	(x_change_tool_bar_height): Mark frame as garbaged since
	adjust_frame_size might not have done that.

2014-11-21  Ulf Jasper  <ulf.jasper@web.de>

	* xml.c (parse_region): Take care of new optional parameter
	'discard-comments' of 'libxml-parse(html|xml)-region'.
	(Flibxml_parse_html_region, Flibxml_parse_xml_region): New
	optional parameter 'discard-comments'.

2014-11-17  Paul Eggert  <eggert@cs.ucla.edu>

	Improve time stamp handling, and be more consistent about it.
	* editfns.c (invalid_time): New function.
	Use it instead of 'error ("Invalid time specification")'.
	(time_add, time_subtract, time_arith, Ftime_add, Ftime_less_p)
	(decode_float_time, lisp_to_timespec, lisp_time_struct):
	New functions.
	(make_time_tail, make_time): Remove.  All uses changed to use
	new functions or plain list4i.
	(disassemble_lisp_time): Return effective length if successful.
	Check that LOW is an integer, if it's combined with other components.
	(decode_time_components): Decode into struct lisp_time, not
	struct timespec, so that we can support a wide set of times
	regardless of whether time_t is signed.  Decode plain numbers
	as seconds since the Epoch, and nil as the current time.
	(lisp_time_argument, lisp_seconds_argument, Ffloat_time):